--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,69 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#main h1{
+  color: #444;
+  align-items: center;
+  text-align: center;
+}
+
+#main{
+  padding: 0px;
+  box-sizing: border-box;
+  width: 60%;
+  height: 100%;
+}
+
+#book-list{
+  padding: 0px;
+}
+
+#book-list li{
+  display: inline-block;
+  margin: 12px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #880e4f;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  color: #880e4f;
+}
+
+form {
+  background-color: #fff;
+  padding: 20px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 400px;
+}
+
+form .field{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 8px;
+}
+
+form label{
+  text-align: right;
+  padding: 6px;
+}
+
+form select, form input{
+  margin: 4px;
+  padding: 6px;
+  box-sizing: border-box;
+}
+
+form button{
+  color: #fff;
+  background-color: #ad1457;
+  border-radius: 50%;
+  font-size: 2em;
+  border: 0;
+  padding: 0 10px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
